fix: align orb component with react bits

--- a/src/components/Orb.css
+++ b/src/components/Orb.css
@@ -3,9 +3,3 @@
   position: relative;
   width: 100%;
 }
-
-.orb-container canvas {
-  display: block;
-  height: 100%;
-  width: 100%;
-}
